[package]
name = "developer-anecdotes"
version = "0.1.0"
authors = ["jim4067 <jimmyimpulse2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cascade = "1.0.0"
gio = "0.14.6"
glib = "0.14.5"
gtk = "0.9.2"
rand = "0.8.3"
